# Neobank-Positioning-Engine-Skill

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: avici-brief.json  kast-brief.json
references/: neobank-messaging-map.md  positioning-frameworks.md
scripts/: analyze_positioning.py  render_positioning.py  run_pipeline.py  scrape_positioning.py
